--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     <h1>Hello, World!</h1>
     <p>This is a sample HTML document.</p>
     <button>Click Me!</button>
+     <script src="button2.js"></script>
 </body>
 </html>
